# my_events_stuff

code/: .bktc1.py.swp  bktc1.py
code/analysis/: 3  calc_abstract_signals.py  calc_ema_signals.py  calc_trade_signals.py  calc_trade_utilities.py  tech_anal.py
code/backtest/: .simulator.py.swp  .strat_CL_time_decay.py.swp  Crude_CL20160420_174901  Crude_CL20160421_163725  Crude_CL20160421_181050  Crude_CL20160422_101439  Crude_CL_best_pnl_per_contract.csv  Crude_CL_best_pnl_per_contract.csv.old  Crude_CL_dates_times.csv  backtest_parallel_dates.py  optimize_brute_force.py  pnl_results_Crude_CL20160422_113232  pnl_results_Crude_CL__20160422_131147  pnl_results_Crude_CL__20160422_141228  pnl_results_Crude_CL__20160422_144152  pnl_results_Crude_CL__20160422_145912  pnl_results_Crude_CL__20160422_151219  pnl_results_Crude_CL__20160426_112907  pnl_results_Crude_CL__20160426_142106  pnl_results_Crude_CL__20160426_143731  pnl_results_Crude_CL__20160426_162527  pnl_results_Crude_CL__20160426_173002  pnl_results_Crude_CL__20160426_173758  pnl_results_Crude_CL__20160427_091929  pnl_results_Crude_CL__20160427_153710  pnl_results_Crude_CL__20160427_154033  pnl_results_Crude_CL__20160427_160335  pnl_results_Crude_CL__20160427_165052  pnl_results_Crude_CL__20160428_103743  pnl_results_Crude_CL__20160428_130509  pnl_results_Crude_CL__20160428_151041  pnl_results_Crude_CL__20160428_155034  pnl_results_Crude_CL__20160428_193202  pnl_results_Crude_CL__20160429_141220  pnl_results_Crude_CL__20160503_102526  pnl_results_Crude_CL__20160503_103210  pnl_results_Crude_CL__20160504_130157  pnl_results_Crude_CL__20160504_132746  pnl_results_Crude_CL__20160504_134055  pnl_results_Crude_CL__20160504_134317  (+26 more)
code/cpp/: md_interface.h  om_interface.h
code/elements/: easy_time.cpp  easy_time.h  eloop.h  linux_event_loop.h  linux_event_loop.hpp  messenger.h  msg_compiler.py  oob_logger.h  parameters_manager.h  pb_writer.h  tcp_buffer.h  timers_manager.h  tsc.h  udp_sender.h  zero_copy_buffer.h
code/elements/experiments/: .gitignore  main.cpp  meson.build  messages.msg  params.proto  printers.h  strategy.param
code/elements/test/: circular_fifo_test.cpp  easy_time_test.cpp  linux_event_loop_test.cpp  meson.build  messenger_test.cpp  out_of_band_logger_test.cpp  param_test_in  tcp_buffer_test.cpp
code/elements/test_parameter_manager/: main.cpp  meson.build  param_test_in  params.proto
code/gen_utils/: big_data_utils.py
code/learn/: train_boosted_regressor.py
code/preprocess/: \  mkdt_utils.py
code/pybt/: make_generator_command.py  make_snapshot_dirs.sh  pybt.py  snapshot_generator.py  utils.py
code/toolchain/: install_toolchain.sh  set_tc_env.sh
(+2 files in other folders)
